--- a/app/src/main/res/layout/queue_item.xml
+++ b/app/src/main/res/layout/queue_item.xml
@@ -94,7 +94,8 @@
             android:src="@android:drawable/ic_menu_close_clear_cancel"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/remove_from_queue"
-            app:tint="?android:attr/textColorSecondary" />
+            app:tint="?android:attr/textColorSecondary"
+            android:visibility="gone" />
 
     </LinearLayout>
 
